# chessNCE

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: seattle-weather.lock.yml  seattle-weather.md
scripts/: download_data.sh
src/: config.py  data_pipeline.py  dataset.py  evaluate.py  evaluate_by_elo.py  model.py  move_config.py  move_dataset.py  move_evaluate.py  move_model.py  move_train.py  self_play.py  train.py  vs_stockfish.py
