[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chessNCE"
version = "0.1.0"
description = "Binary classifier distinguishing historical chess moves from random legal moves (Noise Contrastive Estimation)"
requires-python = ">=3.10"
dependencies = [
    "python-chess>=1.10",
    "torch>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "zstandard>=0.21",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
